<?xml version="1.0"?>
<package format="2">
  <name>cartographer_initial_pose</name>
  <version>0.0.0</version>
  <description>Allows you to set Cartographer's inital pose using RViz's 2D Pose Estimate feature.</description>
  <maintainer email="yushijinhun@gmail.com">Haowei Wen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cartographer_ros_msgs</depend>

</package>
